[metadata]
name = simple-asgi
summary = Simple ASGI HTTP 1.1 web server
description-file =
    README.md
author = Denis Makogon
author-email = denys.makogon@oracle.com
home-page = https://github.com/denismakogon
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
packages =
    simple_asgi

[global]
setup-hooks =
    pbr.hooks.setup_hook
